# reference

./: .gitignore  AMBIENT_TECHNIQUES_INVENTORY.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  FEATURES_INVENTORY.md  IMPLEMENTATION_CONTEXT.md  IMPLEMENTATION_PROMPT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: codebase-agent.md
.claude/context/: architecture.md  security-standards.md  testing-patterns.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-validation.yml  security.yml
app/: __init__.py  main.py
app/api/: health.py
app/api/v1/: items.py
app/core/: config.py  logging.py  security.py
app/models/: __init__.py  item.py
app/services/: item_service.py
docs/: api-reference.md  architecture.md  quickstart.md  tutorial.md
docs/adr/: README.md  template.md
scripts/: record-demo.sh  setup.sh  validate-mermaid.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_cba_workflow.py
tests/integration/: test_api.py
tests/unit/: test_item_service.py
