[project]
name = "ambient-code-reference"
version = "0.1.0"
description = "Ambient Code Reference Repository - AI-assisted development best practices"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ambient Code", email = "noreply@ambient.code"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 999
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 999

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
